--- a/SmartBuild/SmartBuildRole/packages.config
+++ b/SmartBuild/SmartBuildRole/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EasyHttp" version="1.6.14" targetFramework="net452" />
+  <package id="JsonFx" version="2.0.1209.2802" targetFramework="net452" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net452" />
   <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net452" />
@@ -7,6 +9,7 @@
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="System.Spatial" version="5.7.0" targetFramework="net452" />
+  <package id="TeamCitySharp" version="0.3.5" targetFramework="net452" />
   <package id="WindowsAzure.ServiceBus" version="3.4.0" targetFramework="net452" />
   <package id="WindowsAzure.Storage" version="7.2.1" targetFramework="net452" />
 </packages>
