Changed logic of the notifications.

--- a/SmartBuild/SmartBuildRole/app.config
+++ b/SmartBuild/SmartBuildRole/app.config
@@ -56,7 +56,6 @@
     </extensions>
   </system.serviceModel>
   <appSettings>
-    <!-- Service Bus specific app setings for messaging connections -->
-    <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://smart-build.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=LoJkNcQtDeX07TP7WPMUBe2Qq55lxC3MtFD2abvdAm4=" />
+    <add key="Microsoft.NotificationHub.ConnectionString" value="Endpoint=sb://smartbuild.servicebus.windows.net/;SharedAccessKeyName=DefaultFullSharedAccessSignature;SharedAccessKey=GOv4wQTqVpKVT71A/bEpwGDTG6GXDdRzjU+v7z2L/rI=" />
   </appSettings>
 </configuration>
