--- a/SmartBuild/SmartBuildRole/packages.config
+++ b/SmartBuild/SmartBuildRole/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EasyHttp" version="1.6.14" targetFramework="net452" />
+  <package id="EasyHttp" version="1.6.1.0" targetFramework="net452" />
   <package id="JsonFx" version="2.0.1209.2802" targetFramework="net452" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.Azure.NotificationHubs" version="1.0.7" targetFramework="net452" />
   <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net452" />
   <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net452" />
   <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net452" />
@@ -10,6 +11,4 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="System.Spatial" version="5.7.0" targetFramework="net452" />
   <package id="TeamCitySharp" version="0.3.5" targetFramework="net452" />
-  <package id="WindowsAzure.ServiceBus" version="3.4.0" targetFramework="net452" />
-  <package id="WindowsAzure.Storage" version="7.2.1" targetFramework="net452" />
 </packages>
